<resources>
    <string name="app_name">HealthApp</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="about">Health App\n\nWersja 1.0.0\n\nŁukasz Szopa\n\n</string>
    <string name="github">Konto GitHub</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Everyday">Codziennie</string>
    <string name="Cyclic">Cyklicznie</string>
    <string name="Range">W zakresie dat</string>
    <string name="NoMedicinesToday">Brak leków do zażycia dzisiaj</string>
    <string name="TakeMedicines">Przyjmij</string>
    <string name="InTimeMedicines">za</string>
    <string name="SugarMain">Poziom cukru \nwe krwi:</string>
    <string name="StepsMain">Liczba kroków:\n</string>
    <string name="BadSugarNotifTitle">Nieprawidłowy poziom cukru we krwi!</string>
    <string name="BadSugarNotifText">Twój ostatni wprowadzony wynik badania poziomu cukru we krwi nie mieścił się w granicach normy</string>
    <string name="BadTemperatureNotifTitle">Nieprawidłowa temperatura ciała!</string>
    <string name="BadTemperatureNotifText">Twój ostatni wprowadzony wynik badania temperatury ciała nie mieścił się w granicach normy</string>
    <string name="BadBloodPressureNotifTitle">Nieprawidłowe ciśnienie krwi!</string>
    <string name="BadBloodPressureNotifText">Twój ostatni wprowadzony wynik badania ciśnienia tętniczego krwi nie mieścił się w granicach normy</string>
    <string name="BadPulseNotifTitle">Nieprawidłowe tętno!</string>
    <string name="BadPulseNotifText">Twój ostatni wprowadzony wynik badania tętna nie mieścił się w granicach normy</string>
    <string name="BadSaturationNotifTitle">Nieprawidłowa saturacja!</string>
    <string name="BadSaturationNotifText">Twój ostatni wprowadzony wynik saturacji krwi był poniżej normy</string>
    <string name="QuitQuestion">Czy na pewno chcesz wyjść z aplikacji?</string>
    <string name="QuitPrompt">Kliknij tak aby wyjść!</string>
    <string name="Yes">Tak</string>
    <string name="No">Nie</string>
    <string name="PermissionDeniedText">Odmowa dostępu</string>
    <string name="Sugar">Cukier</string>
    <string name="BloodPressure">Ciśnienie krwi</string>
    <string name="Pulse">Tętno</string>
    <string name="Saturation">Saturacja krwi</string>
    <string name="AboutApp">O aplikacji</string>
    <string name="BloodParameters">Parametry krwi</string>
    <string name="Blood_Pressure_Pulse_Saturation">Ciśnienie krwi, puls i saturacja</string>
    <string name="NotKnown">Nieokreślone</string>
    <string name="AfterWorkout">Po wysiłku</string>
    <string name="DuringWorkout">W trakcie wysiłku</string>
    <string name="Nervous">Zdenerwowany/a</string>
    <string name="AfterWakeup">Po przebudzeniu</string>
    <string name="FillAllValues">Proszę uzupełnić wszystkie wartości</string>
    <string name="PickTimeOfTest">Wybierz czas wykonania badania</string>
    <string name="SystolicBloodPressureChartLabel">Ciśnienie skurczowe [mmHg]</string>
    <string name="DiastolicBloodPressureChartLabel">Ciśnienie rozkurczowe [mmHg]</string>
    <string name="LastResult">Ostatni wynik =</string>
    <string name="MeanResult">Średnia wyników =</string>
    <string name="GPS_NoPermission">Odmowa dostępu GPS!</string>
    <string name="StoppedTrackingInfo">Zatrzymano śledzenie lokalizacji</string>
    <string name="SMSText1">Powiadomienie z aplikacji Health App. </string>
    <string name="SMSText2"> może potrzebować pomocy!</string>
    <string name="SMSText3">Aktualna lokalizacja: </string>
    <string name="Incoming">Nadchodząca</string>
    <string name="Completed">Zakończona</string>
    <string name="Rescheduled">Przełożona</string>
    <string name="FillValuesOfVisit">Proszę uzupełnić nazwę wizyty</string>
    <string name="PickVisitTime">Wybierz godzinę wizyty</string>
    <string name="OnEmptyStomach">Na czczo</string>
    <string name="BeforeEating">Przed posiłkiem</string>
    <string name="AfterEating">Po posiłku</string>
    <string name="OneTime">Jednorazowo</string>
    <string name="Cyclic_MoreInfo">Cyklicznie (co tydzień)</string>
    <string name="MedicinesSchedule">Harmonogram leków</string>
    <string name="MedicineSchedule">Harmonogram przyjmowania leku</string>
    <string name="Medicine">Lek :</string>
    <string name="MedicineHour">\nGodzina :</string>
    <string name="MedicineDose">\nDawka:</string>
    <string name="MonthSummary">Podsumowanie miesiąca</string>
    <string name="SummaryMean">Średnia :</string>
    <string name="SummaryMeanNoValues">Średnia : brak danych</string>
    <string name="SummaryNoDaysInNorm">Liczba dni w normie :</string>
    <string name="SummaryMeanBloodPressureNoResults">Średnie ciśnienie : brak danych</string>
    <string name="SummaryMeanSaturationNoResults">Średnia saturacja : brak danych</string>
    <string name="SummaryMeanPulseNoResults">Średnie tętno : brak danych</string>
    <string name="SummaryMeanBloodPressure">Średnie ciśnienie :</string>
    <string name="SummaryMeanSaturation">Średnia saturacja :</string>
    <string name="SummaryMeanPulse">Średnie tętno :</string>
    <string name="SummaryStepsNoDays">Liczba dni z osiągniętym celem :</string>
    <string name="Monday">Poniedziałek</string>
    <string name="Tuesday">Wtorek</string>
    <string name="Wednesday">Środa</string>
    <string name="Thursday">Czwartek</string>
    <string name="Friday">Piątek</string>
    <string name="Saturday">Sobota</string>
    <string name="Sunday">Niedziela</string>
    <string name="January">Styczeń</string>
    <string name="February">Luty</string>
    <string name="March">Marzec</string>
    <string name="April">Kwiecień</string>
    <string name="May">Maj</string>
    <string name="June">Czerwiec</string>
    <string name="July">Lipiec</string>
    <string name="August">Sierpień</string>
    <string name="September">Wrzesień</string>
    <string name="October">Październik</string>
    <string name="November">Listopad</string>
    <string name="December">Grudzień</string>
    <string name="MyProfile">Mój profil</string>
    <string name="PulseChartLabel">Tętno [BPM]</string>
    <string name="RemindNotifTitle">Wprowadź wszystkie pomiary</string>
    <string name="RemindNotifText">Dzisiaj nie uzupełniłeś swoich wyników!</string>
    <string name="Temperature">Temperatura ciała</string>
    <string name="VisitSchedule">Harmonogram wizyt</string>
    <string name="ResultEdit">Edycja wyniku</string>
    <string name="NoCameraText">Nie ma możliwości dodania rekordu za pomocą kamery</string>
    <string name="EditorQuitQuestion">Czy chcesz odrzucić wprowadzone dane?</string>
    <string name="EditorQuitPrompt">Naciśnięcie przycisku Tak spowoduje usunięcie wprowadzonych zmian!</string>
    <string name="SaturationChartLabel">Saturacja [%]</string>
    <string name="Settings">Ustawienia</string>
    <string name="Steps">Kroki</string>
    <string name="StepsChartLabel">Wykonane kroki</string>
    <string name="SugarAndBMI">Cukier i BMI</string>
    <string name="SugarChartLabel">Poziom cukru we krwi [mg/dl]</string>
    <string name="BMI_Emaciation">Stan wychudzenia!</string>
    <string name="BMI_Starvation">Stan wygłodzenia!</string>
    <string name="BMI_Obesity1">Stan otyłości 1 stopnia!</string>
    <string name="BMI_Obesity2">Stan otyłości 2 stopnia!</string>
    <string name="BMI_Obesity3">Stan otyłości 3 stopnia!</string>
    <string name="BMI_Underweight">Stan niedowagi!</string>
    <string name="BMI_Overweight">Stan nadwagi!</string>
    <string name="BMI_Correct">BMI prawidłowe.</string>
    <string name="TemperatureChartLabel">Temperatura ciała [°C]</string>
    <string name="CameraActivityLabel">Dodanie wyniku za pomocą kamery</string>
    <string name="ResultType">Typ wprowadzanego badania : \n</string>
    <string name="BloodSugar">Cukier we krwi :</string>
    <string name="SystolicBloodPressure">Ciśnienie skurczowe :</string>
    <string name="DiastolicBloodPressure">Ciśnienie rozkurczowe :</string>
    <string name="PulseTextRecogn">Puls :</string>
    <string name="SaturationTextRecogn">Saturacja :</string>
    <string name="VisitNotifTitle">Zbliżająca się wizyta!</string>
    <string name="VisitNotifTextTomorrow">Twoja wizyta lekarska odbędzie się jutro.</string>
    <string name="VisitNotifTextHour">Twoja wizyta lekarska odbędzie się za godzinę!</string>
    <string name="MedicineNotifTitle">Przyjmij lek!</string>
    <string name="MedicineNotifText">Przyjmij lek - </string>
    <string name="Address">\nAdres: </string>
    <string name="Doctor">\nLekarz: </string>
    <string name="BloodPressureParameterHint">Wybrany parametr krwi</string>
    <string name="DailySummary">Dzienne podsumowanie</string>
    <string name="ProfileNameHint">Imię i nazwisko</string>
    <string name="Age">Wiek</string>
    <string name="Height">Wzrost</string>
    <string name="Weight">Waga</string>
    <string name="ProfilePhoneNumber">Telefon do bliskiej osoby</string>
    <string name="ResultTypeHint">Typ wprowadzanego badania</string>
    <string name="StartCamera">Rozpocznij odczyt</string>
    <string name="ConfirmCamera">Zatwierdź wynik</string>
    <string name="ValueReadFromCamera">Odczytana wartość :</string>
    <string name="PhoneNumberToCall">Wybierz numer\nna który chcesz zadzwonić</string>
    <string name="EmergencyPhone">Służby ratunkowe - 112</string>
    <string name="ClosePersonPhone">Bliska osoba</string>
    <string name="ResultDate">Data wykonania badania</string>
    <string name="ResultHour">Godzina wykonania badania</string>
    <string name="PulseLevel">Poziom tętna</string>
    <string name="AdditionalInfoAboutResult">Dodatkowe informacje o badaniu</string>
    <string name="Reset">RESET</string>
    <string name="TakePhoto">Zrób zdjęcie</string>
    <string name="MedicineDateFrom">Data rozpoczęcia przyjmowania leku</string>
    <string name="MedicineDateTo">Data zakończenia przyjmowania leku</string>
    <string name="VisitName">Nazwa wizyty</string>
    <string name="VisitDate">Data wizyty</string>
    <string name="VisitHour">Godzina wizyty</string>
    <string name="VisitStatus">Status wizyty</string>
    <string name="CyclicType">Cykliczność przyjmowania</string>
    <string name="MedicineTakeHour">Godzina przyjęcia leku</string>
    <string name="MedicineName">Nazwa leku</string>
    <string name="MedicineAdditionalInfo">Dodatkowe informacje</string>
    <string name="MedicineDay">Dzień przyjmowania leku</string>
    <string name="MedicineDateOneTime">Data przyjęcia leku</string>
    <string name="Date">Data</string>
    <string name="StepsDone">Wykonane kroki</string>
    <string name="SugarInBlood">Cukier we krwi</string>
    <string name="SugarAdditionalInfo">Podczas posiłku</string>
    <string name="Username">Username</string>
    <string name="TestResults">Wyniki badań</string>
    <string name="SugarNavLabel">Poziom cukru we krwi</string>
    <string name="StepsNavLabel">Liczba wykonanych kroków</string>
    <string name="Schedule">Harmonogram</string>
    <string name="Quit">Wyjdź</string>
    <string name="Profile">Profil</string>
    <string name="GeneralSettings">Ogólne</string>
    <string name="Language">Język</string>
    <string name="DarkMode">Tryb ciemny</string>
    <string name="Measurements">Pomiary</string>
    <string name="DailyStepGoal">Dzienny cel kroków</string>
    <string name="SugarUnit">Jednostka pomiaru poziomu cukru</string>
    <string name="TemperatureUnit">Jednostka temperatury</string>
    <string name="Notifications">Powiadomienia</string>
    <string name="PermissionForNotifications">Zgoda na wysyłanie powiadomień</string>
    <string name="NotificationEnabled">Powiadomienia włączone</string>
    <string name="NotificationDisabled">Powiadomienia wyłączone</string>
</resources>