<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="?attr/homeAsUpIndicator" />

    <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_marginTop="30dp"
            android:id="@+id/photo"
            android:background="@drawable/roundedbutton"
            android:layout_centerHorizontal="true"
            android:scaleType="centerCrop"
            android:maxHeight="200dp"
            android:maxWidth="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="userPhoto"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/photo"
            android:id="@+id/name"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:hint="@string/ProfileNameHint"
            android:inputType="textPersonName"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:textSize="22sp"
            android:text="@string/Age"
            android:textStyle="bold"
            android:gravity="bottom"
            android:id="@+id/age_text"
            />

    <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:id="@+id/age"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="22sp"
            android:hint="@string/Age"
            android:inputType="number"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/age_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:textSize="22sp"
            android:text="@string/Height"
            android:textStyle="bold"
            android:gravity="bottom"
            android:id="@+id/height_text"
            />

    <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/age_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:id="@+id/height"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="22sp"
            android:hint="@string/Height"
            android:inputType="number"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_below="@id/height_text"
            android:layout_alignParentStart="true"
            android:layout_marginStart="100dp"
            android:textSize="22sp"
            android:text="@string/Weight"
            android:textStyle="bold"
            android:gravity="bottom"
            android:id="@+id/weight_text"
            />

    <EditText
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:paddingTop="20dp"
            android:layout_below="@+id/height_text"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="100dp"
            android:id="@+id/weight"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="22sp"
            android:hint="@string/Weight"
            android:inputType="number"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/weight"
            android:id="@+id/phonenumber"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:textSize="24sp"
            android:hint="@string/ProfilePhoneNumber"
            android:inputType="phone"
            android:maxLength="15"/>


</RelativeLayout>