<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent">

    <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MedicalVisitEditorFragment">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="@string/VisitName"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visitNameEdit"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:layout_below="@+id/nameText"
                android:inputType="text"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/VisitDate"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/visitNameEdit"
                android:id="@+id/visitDateText"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visit_date_picker_button"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                style="?android:spinnerStyle"
                android:layout_below="@+id/visitDateText"
                />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/VisitHour"
                android:layout_below="@id/visit_date_picker_button"
                android:layout_marginTop="20dp"
                android:id="@+id/visitHourText"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visit_time_picker_button"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="30sp"
                style="?android:spinnerStyle"
                android:layout_below="@+id/visitHourText"
                />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addressText"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/visit_time_picker_button"
                android:text="@string/Address"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visitAddressEdit"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:layout_below="@+id/addressText"
                android:inputType="text"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/doctorText"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/visitAddressEdit"
                android:text="@string/Doctor"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/visitDoctorEdit"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:layout_below="@+id/doctorText"
                android:inputType="text"/>

        <TextView
                android:id="@+id/visitStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_below="@+id/visitDoctorEdit"
                android:layout_marginTop="20dp"
                android:text="@string/VisitStatus" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/visitStatus"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/visitStatusText"
                android:textAlignment="center"
                >

            <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/visitStatus_items"
                    android:textAlignment="center"
                    android:focusable="false"
                    android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/visitStatus"
                android:background="@drawable/roundedbutton"
                android:id="@+id/deleteVisitButton"
                android:layout_alignParentStart="true"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/ic_delete"/>

        <ImageButton
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_below="@+id/visitStatus"
                android:background="@drawable/roundedbutton"
                android:id="@+id/confirmVisitButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="50dp"
                android:src="@drawable/ic_add_result"/>

    </RelativeLayout>
</ScrollView>
