<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/ResultDate"
            android:layout_marginTop="20dp"
            android:id="@+id/dateText"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/date_picker_button"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            style="?android:spinnerStyle"
            android:layout_below="@+id/dateText"
            />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/ResultHour"
            android:layout_below="@id/date_picker_button"
            android:layout_marginTop="20dp"
            android:id="@+id/hourText"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_picker_button"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textSize="30sp"
            style="?android:spinnerStyle"
            android:layout_below="@+id/hourText"
            />

    <TextView
            android:id="@+id/sugarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/time_picker_button"
            android:text="@string/SugarInBlood" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sugarText"
            android:layout_marginStart="20dp"
            android:id="@+id/sugarResultLayout"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal" >

        <EditText
                android:id="@+id/sugarValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25sp"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
                android:id="@+id/value_unit_symbol"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="mg/dl"
                android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
            android:id="@+id/sugarTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_below="@id/sugarResultLayout"
            android:text="@string/SugarAdditionalInfo" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sugarType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:theme="@style/Theme.MaterialComponents.DayNight"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sugarTypeText"
            android:textAlignment="center"
            >

        <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sugarType_items"
                android:textAlignment="center"
                android:focusable="false"
                android:inputType="none"/>

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sugarType"
            android:background="@drawable/roundedbutton"
            android:id="@+id/deleteResultButton"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_delete"/>

    <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/sugarType"
            android:background="@drawable/roundedbutton"
            android:id="@+id/confirmResultButton"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_add_result"/>



</RelativeLayout>